Fix datepicker z-index

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -47,6 +47,7 @@ header #header-content { @include centered; }
 a#main-logo { display: block; width: 639px; height: 151px; background: url("/images/logo.png") no-repeat; }
 .subtitle { top: 150px; left: 130px; font-size: 20px; position: absolute; }
 #content h1 { top: -110px; position: relative; left: -10px; }
+body #ui-datepicker-div { z-index:9999!important; }
 body { background: url('/images/bg.png') repeat; }
 h1, h2 { margin: 1.2em 0 .6em; }
 h1 { font-size: 120px; text-align: center; }
